<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <group android:checkableBehavior="single" android:id="@+id/group1">

            <item android:id="@+id/nav_history"
                android:icon="@mipmap/ic_history"
                android:title="@string/history" />

            <item android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_settings"
                android:title="@string/settings" />

            <item android:id="@+id/nav_profile"
                android:icon="@mipmap/ic_profile"
                android:title="@string/profile"/>
        </group>

        <group android:checkableBehavior="single" android:id="@+id/group2">
                <item android:title="@string/help"
                    android:icon="@mipmap/ic_help"/>
        </group>
</menu>