<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!--Title-->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_map_style"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


        <FrameLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"/>

        <!--Regular-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_regular_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regular"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <FrameLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"/>

        <!--satellite-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_satellite_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/satellite_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>


        <FrameLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"/>

        <!--terrain-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_terrain_layout"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/terrain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrain"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>



    </LinearLayout>


</LinearLayout>