<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/gps_space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/enable_button"
            android:layout_width="@dimen/gps_button_width"
            android:layout_height="@dimen/gps_button_height"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:background="@drawable/oval_accent_color_background"
            android:onClick="onClick"
            android:text="@string/enable_it"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gps_dialog_text"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="@dimen/gps_button_width"
            android:layout_height="@dimen/gps_button_height"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:background="@drawable/oval_gray_color_background"
            android:onClick="onClick"
            android:text="@string/contine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gps_dialog_text"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/enable_location_service"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/gps_dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/gps_text_dialog"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gps_space" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>