<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!--Title-->
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_audio_language"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


        <FrameLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"/>

        <!--Regular-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_english_language"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/english_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <FrameLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"/>

        <!--satellite-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_germany_language"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/germany_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/germany"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>


        <FrameLayout
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"/>

        <!--terrain-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/select_french_language"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/french_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>



    </LinearLayout>

</LinearLayout>