<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0.5dp"
    android:background="@color/colorAccent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/dialog_margin"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/calories_editText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_calories"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/med_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout5" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calories_text"
            android:textColor="@color/white"
            android:textSize="@dimen/med_font_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout5"
            android:layout_width="@dimen/space_width"
            android:layout_height="@dimen/space_height"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/set_calories_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/set_calories_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/set_button_height"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/set"
            android:textColor="@color/white"
            android:textSize="@dimen/med_font_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calories_editText" />


    </android.support.constraint.ConstraintLayout>




</LinearLayout>